--- a/find-id.html
+++ b/find-id.html
@@ -43,18 +43,26 @@
 
         <main id="main" class="user-auth">
             <div class= "inner"> 
-                <div class="user-auth-wrap login-wrap">
-                    <h3 class="main-title">로그인</h3>
+                <div class="user-auth-wrap find-wrap">
+                    <h3 class="main-title">아이디 / 비밀번호 찾기</h3>
+                    <ul class="tab-view">
+                        <li>아이디 찾기</li>
+                        <li>비밀번호 찾기</li> 
+                    </ul>
+                    <div class="guide-title">
+                        등록된 휴대폰 번호로 찾기
+                        <span>가입 당시 입력한 휴대전화번호를 통해 인증 후 아이디를 찾아주세요.</span>
+                    </div>
                     <form>
                         <div class="input_wrap">
                             <fieldset class="input_container">
                                 <label for="id" class="input_title login_title">
-                                    <input type="text" id="id" placeholder="아이디">
+                                    <input type="text" id="id" placeholder="휴대전화">
                                 </label>
                             </fieldset>
                             <fieldset class="input_container">
                                 <label for="password" class="password_container">
-                                    <input id="password" type="password" autocomplete="off" placeholder="비밀번호" oninput="updatePassword()">
+                                    <input id="password" type="password" autocomplete="off" placeholder="인증번호" oninput="updatePassword()">
                                     <span class="eyeBtn">
                                         <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path fill-rule="evenodd" clip-rule="evenodd" d="M9.99997 0.25C5.91882 0.25 2.36847 2.51686 0.542558 5.85557C0.152487 6.56882 0.15248 7.43102 0.54254 8.14428C2.36843 11.4831 5.91882 13.75 10 13.75C14.0812 13.75 17.6315 11.4831 19.4574 8.14443C19.8475 7.43118 19.8475 6.56898 19.4575 5.85572C17.6316 2.51694 14.0812 0.25 9.99997 0.25ZM10 4.75C8.75736 4.75 7.75 5.75736 7.75 7C7.75 8.24264 8.75736 9.25 10 9.25C10.6805 9.25 11.2904 8.94794 11.7029 8.47059C11.0168 8.33275 10.5 7.72673 10.5 7C10.5 6.27327 11.0168 5.66725 11.7029 5.52941C11.2904 5.05206 10.6805 4.75 10 4.75ZM6.25 7C6.25 4.92893 7.92893 3.25 10 3.25C12.0711 3.25 13.75 4.92893 13.75 7C13.75 9.07107 12.0711 10.75 10 10.75C7.92893 10.75 6.25 9.07107 6.25 7Z" fill="#999"/>
@@ -65,19 +73,8 @@
                         </div>
                     </form>
                     <div class="btn_wrap">
-                        <button type="button" class="finishBtn loginBtn">로그인</button>
+                        <button type="button" class="finishBtn findBtn">아이디 찾기</button>
                     </div>
-                    <ul class="user_account">
-                        <li>
-                            <a href="ㅊ">회원가입</a>
-                        </li>
-                        <li>
-                            <a href="find_id.html">아이디 찾기</a>
-                        </li>
-                        <li>
-                            <a href="find_pw.html">비밀번호 찾기</a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </main>
