--- a/find-id.html
+++ b/find-id.html
@@ -51,29 +51,24 @@
                     </ul>
                     <div class="guide-title">
                         등록된 휴대폰 번호로 찾기
-                        <span>가입 당시 입력한 휴대전화번호를 통해 인증 후 아이디를 찾아주세요.</span>
+                        <span>가입 당시 입력한 휴대번호를 통해 인증 후 아이디를 찾아주세요.</span>
                     </div>
-                    <form>
-                        <div class="input_wrap">
-                            <fieldset class="input_container">
-                                <label for="id" class="input_title login_title">
-                                    <input type="text" id="id" placeholder="휴대전화">
-                                </label>
-                            </fieldset>
-                            <fieldset class="input_container">
-                                <label for="password" class="password_container">
-                                    <input id="password" type="password" autocomplete="off" placeholder="인증번호" oninput="updatePassword()">
-                                    <span class="eyeBtn">
-                                        <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M9.99997 0.25C5.91882 0.25 2.36847 2.51686 0.542558 5.85557C0.152487 6.56882 0.15248 7.43102 0.54254 8.14428C2.36843 11.4831 5.91882 13.75 10 13.75C14.0812 13.75 17.6315 11.4831 19.4574 8.14443C19.8475 7.43118 19.8475 6.56898 19.4575 5.85572C17.6316 2.51694 14.0812 0.25 9.99997 0.25ZM10 4.75C8.75736 4.75 7.75 5.75736 7.75 7C7.75 8.24264 8.75736 9.25 10 9.25C10.6805 9.25 11.2904 8.94794 11.7029 8.47059C11.0168 8.33275 10.5 7.72673 10.5 7C10.5 6.27327 11.0168 5.66725 11.7029 5.52941C11.2904 5.05206 10.6805 4.75 10 4.75ZM6.25 7C6.25 4.92893 7.92893 3.25 10 3.25C12.0711 3.25 13.75 4.92893 13.75 7C13.75 9.07107 12.0711 10.75 10 10.75C7.92893 10.75 6.25 9.07107 6.25 7Z" fill="#999"/>
-                                        </svg>
-                                    </span>
-                                </label>
-                            </fieldset>
+                    <div class="input_wrap">
+                        <div class="input_container">
+                            <label for="phone" class="input_title">
+                                <input type="tel" id="phone" placeholder="휴대전화">
+                            </label>
+                            <button class="codeBtn" type="button">인증번호 전송</button>
                         </div>
-                    </form>
+                        <div class="input_container m-top20">
+                            <label for="code" class="password_container">
+                                <input id="code" type="text" placeholder="인증번호">
+                            </label>
+                            <button class="checkBtn" type="button">확인</button>
+                        </div>
+                    </div>
                     <div class="btn_wrap">
-                        <button type="button" class="finishBtn findBtn">아이디 찾기</button>
+                        <button type="button" class="finishBtn">아이디 찾기</button>
                     </div>
                 </div>
             </div>
@@ -168,48 +163,65 @@
     <script src="js/script.js"></script>
 
     <script>
-        function updatePassword() {
-            // 비밀번호 처리 로직
-        }
+    //-- 인증번호 전송 버튼 클릭 이벤트
+    let countdowns = new Map();
 
-        const eyeBtn = document.querySelector('.eyeBtn');
-        const passwordInput = document.getElementById('password');
+    document.querySelectorAll(".codeBtn").forEach((btn) => {
+        btn.addEventListener("click", function() {
+            if (countdowns.has(btn)) return;
 
-        eyeBtn.addEventListener('click', () => {
-            if (passwordInput.type === 'password') {
-                passwordInput.type = 'text'; // 비밀번호 표시
-            } else {
-                passwordInput.type = 'password'; // 비밀번호 숨기기
-            }
+            alert("인증번호가 전송되었습니다.");
+
+            let timeLeft = 180;
+            btn.disabled = true;
+            btn.textContent = `남은 시간 : ${timeLeft}초`;
+
+            // 개별 버튼의 카운트다운 실행
+            let countdown = setInterval(function() {
+                timeLeft--;
+                btn.textContent = `남은 시간 : ${timeLeft}초`;
+
+                if (timeLeft <= 0) {
+                    clearInterval(countdown);
+                    btn.disabled = false;
+                    btn.textContent = "인증번호 받기";
+                    countdowns.delete(btn);
+
+                    // 타이머 종료 후 .checkBtn 스타일 원래대로 복구 (선택 사항)
+                    if (checkBtn) {
+                        checkBtn.classList.remove("codeBtn");
+                    }
+                }
+            }, 1000);
+
+            countdowns.set(btn, countdown);
         });
-        
-        //패스워드 눈 아이콘 클릭
-        let $eyeBtn = $('.eyeBtn');
+    });
 
-        $eyeBtn.click(function(){
-            let $path = $(this).find('svg > path');
-            let pathColor = $path.css('fill');
+    // -- 인증번호 입력란 포커스 시 확인 버튼 활성화 스타일
+    const checkBtn = document.querySelector(".checkBtn");
+    const codeInput = document.querySelector("#code");
 
-            if (pathColor === 'rgb(153, 153, 153)') {
-                $path.css({fill : '#222'}); 
-            } else {
-                $path.css({fill : '#999'});
-            }
+    codeInput.addEventListener("focus", function() {
+        checkBtn.style.borderColor = "#5228F4";
+        checkBtn.style.color = "#5228F4";
+        checkBtn.style.background = "#FAFAFA";
+    });
+
+    codeInput.addEventListener("blur", function() {
+        checkBtn.style.borderColor = ""; // 기본값으로 되돌리기
+        checkBtn.style.color = ""; 
+        checkBtn.style.background = "";
+    });
+
+    // -- 휴대전화, 인증번호 인풋 숫자만 입력
+    document.querySelectorAll("#phone, #code").forEach((input) => {
+        input.addEventListener("input", function () {
+            this.value = this.value.replace(/[^0-9]/g, ""); // 숫자만 입력 가능
         });
+    });
 
-        //로그인 상태 유지 클릭
-        let $keepLogin = $('.keep_login');
 
-        $keepLogin.click(function(){
-            let $rect = $(this).find('svg > rect');
-            let rectColor = $rect.css('fill');
-
-            if (rectColor === 'rgb(211, 211, 211)') { /* d3d3d3 */
-                $(this).css({color : '#999'});
-            } else if (rectColor === 'rgb(10, 56, 124)') {
-                $(this).css({color : '#222'});
-            }
-        });
     </script>
 </body>
 </html>
