edit: login.html 링크 연결

--- a/login.html
+++ b/login.html
@@ -63,11 +63,11 @@
                         </div>
                     </div>
                     <div class="btn_wrap">
-                        <button type="button" class="finishBtn">로그인</button>
+                        <button type="button" class="finishBtn" onclick="location.href='home-after.html'">로그인</button>
                     </div>
                     <ul class="user_account">
                         <li>
-                            <a href="ㅊ">회원가입</a>
+                            <a href="register-hp.html">회원가입</a>
                         </li>
                         <li>
                             <a href="find_id.html">아이디 찾기</a>
