--- a/find-id-complete.html
+++ b/find-id-complete.html
@@ -3,16 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 사파리폰트적용 (프리텐다드) -->
-    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css" />
-    
     <title>Viral | 아이디/비밀번호 찾기</title>
 
-    <!--Jqurey CDN-->
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-
-    <!-- 공통 css -->
-    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/main.css">
 
 </head>
@@ -46,8 +39,8 @@
                 <div class="user-auth-wrap find-result-wrap">
                     <h3 class="main-title">아이디 / 비밀번호 찾기</h3>
                     <ul class="tab-view">
-                        <li>아이디 찾기</li>
-                        <li>비밀번호 찾기</li> 
+                        <li class="tab-active">아이디 찾기</li>
+                        <li class="tab-disb">비밀번호 찾기</li> 
                     </ul>
                     <div class="guide-title">
                         아래의 아이디로 로그인 해주세요.
@@ -56,7 +49,7 @@
                         회원님의 아이디는 <b>00000</b> 입니다.
                     </div>
                     <div class="btn_wrap">
-                        <button type="button" class="finishBtn">로그인 페이지로 이동하기</button>
+                        <button type="button" class="finishBtn" onclick="location.href='login.html'">로그인 페이지로 이동하기</button>
                     </div>
                 </div>
             </div>
@@ -149,59 +142,5 @@
     </section>
 
     <script src="js/script.js"></script>
-
-    <script>
-    //-- 인증번호 전송 버튼 클릭 이벤트
-    let countdowns = new Map();
-
-    document.querySelectorAll(".codeBtn").forEach((btn) => {
-        btn.addEventListener("click", function() {
-            if (countdowns.has(btn)) return;
-
-            alert("인증번호가 전송되었습니다.");
-
-            let timeLeft = 180;
-            btn.disabled = true;
-            btn.textContent = `남은 시간 : ${timeLeft}초`;
-
-            // 개별 버튼의 카운트다운 실행
-            let countdown = setInterval(function() {
-                timeLeft--;
-                btn.textContent = `남은 시간 : ${timeLeft}초`;
-
-                if (timeLeft <= 0) {
-                    clearInterval(countdown);
-                    btn.disabled = false;
-                    btn.textContent = "인증번호 받기";
-                    countdowns.delete(btn);
-
-                    // 타이머 종료 후 .checkBtn 스타일 원래대로 복구 (선택 사항)
-                    if (checkBtn) {
-                        checkBtn.classList.remove("codeBtn");
-                    }
-                }
-            }, 1000);
-
-            countdowns.set(btn, countdown);
-        });
-    });
-
-    // -- 인증번호 입력란 포커스 시 확인 버튼 활성화 스타일
-    const checkBtn = document.querySelector(".checkBtn");
-    const codeInput = document.querySelector("#code");
-
-    codeInput.addEventListener("focus", function() {
-        checkBtn.style.borderColor = "#5228F4";
-        checkBtn.style.color = "#5228F4";
-        checkBtn.style.background = "#FAFAFA";
-    });
-
-    codeInput.addEventListener("blur", function() {
-        checkBtn.style.borderColor = ""; // 기본값으로 되돌리기
-        checkBtn.style.color = ""; 
-        checkBtn.style.background = "";
-    });
-
-    </script>
 </body>
 </html>
