--- a/login.html
+++ b/login.html
@@ -3,16 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 사파리폰트적용 (프리텐다드) -->
-    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css" />
-    
     <title>Viral | 로그인</title>
-
-    <!--Jqurey CDN-->
+    
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-
-    <!-- 공통 css -->
-    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/main.css">
 
 </head>
@@ -70,10 +63,10 @@
                             <a href="register-hp.html">회원가입</a>
                         </li>
                         <li>
-                            <a href="find_id.html">아이디 찾기</a>
+                            <a href="find-id.html">아이디 찾기</a>
                         </li>
                         <li>
-                            <a href="find_pw.html">비밀번호 찾기</a>
+                            <a href="find-pw.html">비밀번호 찾기</a>
                         </li>
                     </ul>
                 </div>
