add: find-pw-complete.html

--- a/find-pw-complete.html
+++ b/find-pw-complete.html
@@ -43,33 +43,22 @@
                         <li class="tab-active">비밀번호 찾기</li> 
                     </ul>
                     <div class="guide-title">
-                        등록된 휴대폰 번호로 찾기
-                        <span>
-                            가입 당시 입력한 휴대전화번호를 통해 인증 후<br class="mob-br">
-                            새 비밀번호로 변경해주세요.
-                        </span>
+                        새 비밀번호 설정 후, 로그인해 주세요.
                     </div>
                     <div class="input_wrap">
                         <div class="input_container">
-                            <label for="id" class="input_title">
-                                <input type="text" id="id" placeholder="아이디">
+                            <label for="new-pw" class="input_title">
+                                <input type="password" id="newPw" placeholder="새 비밀번호">
                             </label>
                         </div>
                         <div class="input_container m-top20">
-                            <label for="phone" class="input_title">
-                                <input type="tel" id="phone" placeholder="휴대전화">
+                            <label for="check-pw" class="input_title">
+                                <input type="password" id="checkPw" placeholder="비밀번호 확인">
                             </label>
-                            <button class="codeBtn" type="button">인증번호 전송</button>
-                        </div>
-                        <div class="input_container m-top20">
-                            <label for="code" class="password_container">
-                                <input id="code" type="text" placeholder="인증번호">
-                            </label>
-                            <button class="checkBtn" type="button">확인</button>
                         </div>
                     </div>
                     <div class="btn_wrap">
-                        <button type="button" class="finishBtn" onclick="location.href='find-pw-complete.html'">비밀번호 찾기</button>
+                        <button type="button" class="finishBtn" onclick="location.href='index.html'">비밀번호 변경하기</button>
                     </div>
                 </div>
             </div>
@@ -162,82 +151,5 @@
     </section>
 
     <script src="js/script.js"></script>
-
-    <script>
-        //-- 인증번호 전송 버튼 클릭 이벤트
-        let countdowns = new Map();
-
-        document.querySelectorAll(".codeBtn").forEach((btn) => {
-            btn.addEventListener("click", function() {
-                if (countdowns.has(btn)) return;
-
-                alert("인증번호가 전송되었습니다.");
-
-                let timeLeft = 180;
-                btn.disabled = true;
-                btn.textContent = `남은 시간 : ${timeLeft}초`;
-
-                // 개별 버튼의 카운트다운 실행
-                let countdown = setInterval(function() {
-                    timeLeft--;
-                    btn.textContent = `남은 시간 : ${timeLeft}초`;
-
-                    if (timeLeft <= 0) {
-                        clearInterval(countdown);
-                        btn.disabled = false;
-                        btn.textContent = "인증번호 받기";
-                        countdowns.delete(btn);
-
-                        // 타이머 종료 후 .checkBtn 스타일 원래대로 복구 (선택 사항)
-                        if (checkBtn) {
-                            checkBtn.classList.remove("codeBtn");
-                        }
-                    }
-                }, 1000);
-
-                countdowns.set(btn, countdown);
-            });
-        });
-
-        // -- 인증번호 입력란 포커스 시 확인 버튼 활성화 스타일
-        const checkBtn = document.querySelector(".checkBtn");
-        const codeInput = document.querySelector("#code");
-
-        codeInput.addEventListener("focus", function() {
-            checkBtn.style.borderColor = "#5228F4";
-            checkBtn.style.color = "#5228F4";
-            checkBtn.style.background = "#FAFAFA";
-        });
-
-        codeInput.addEventListener("blur", function() {
-            if (codeInput.value.length === 0) {
-                checkBtn.style.borderColor = ""; // 기본값으로 되돌리기
-                checkBtn.style.color = ""; 
-                checkBtn.style.background = "";
-            }
-        });
-
-        // -- 인증번호 입력 시 확인 버튼 스타일 변경
-        codeInput.addEventListener("input", function() {
-            if (codeInput.value.length > 0) {
-                checkBtn.style.borderColor = "#5228F4";
-                checkBtn.style.color = "#5228F4";
-                checkBtn.style.background = "#FAFAFA";
-            } else {
-                checkBtn.style.borderColor = "";
-                checkBtn.style.color = "";
-                checkBtn.style.background = "";
-            }
-        });
-
-        // -- 휴대전화, 인증번호 인풋 숫자만 입력
-        document.querySelectorAll("#phone, #code").forEach((input) => {
-            input.addEventListener("input", function () {
-                this.value = this.value.replace(/[^0-9]/g, ""); // 숫자만 입력 가능
-            });
-        });
-
-
-    </script>
 </body>
 </html>
