--- a/find-id.html
+++ b/find-id.html
@@ -51,13 +51,13 @@
                             <label for="phone" class="input_title">
                                 <input type="tel" id="phone" placeholder="휴대전화">
                             </label>
-                            <button class="codeBtn" type="button">인증번호 전송</button>
+                            <button class="codeBtn focusBtn" type="button">인증번호 전송</button>
                         </div>
                         <div class="input_container m-top20">
                             <label for="code" class="password_container">
                                 <input id="code" type="text" placeholder="인증번호">
                             </label>
-                            <button class="checkBtn" type="button">확인</button>
+                            <button class="n-focusBtn" type="button">확인</button>
                         </div>
                     </div>
                     <div class="btn_wrap">
@@ -192,20 +192,20 @@
         });
 
         // -- 인증번호 입력란 포커스 시 확인 버튼 활성화 스타일
-        const checkBtn = document.querySelector(".checkBtn");
+        const NfocusBtn = document.querySelector(".n-focusBtn");
         const codeInput = document.querySelector("#code");
 
         codeInput.addEventListener("focus", function() {
-            checkBtn.style.borderColor = "#5228F4";
-            checkBtn.style.color = "#5228F4";
-            checkBtn.style.background = "#FAFAFA";
+            NfocusBtn.style.borderColor = "#5228F4";
+            NfocusBtn.style.color = "#5228F4";
+            NfocusBtn.style.background = "#FAFAFA";
         });
 
         codeInput.addEventListener("blur", function() {
             if (codeInput.value.length === 0) {
-                checkBtn.style.borderColor = ""; // 기본값으로 되돌리기
-                checkBtn.style.color = ""; 
-                checkBtn.style.background = "";
+                NfocusBtn.style.borderColor = ""; // 기본값으로 되돌리기
+                NfocusBtn.style.color = ""; 
+                NfocusBtn.style.background = "";
             }
         });
 
