--- a/register-form.html
+++ b/register-form.html
@@ -34,19 +34,26 @@
             </div>
         </header>
 
-        <main id="main" class="user-auth">
+        <main id="main" class="user-auth register-form">
             <div class= "inner"> 
-                <div class="user-auth-wrap login-wrap">
+                <div class="user-auth-wrap">
                     <h3 class="main-title">회원가입</h3>
                     <div class="guide-title">
                         <span>회원가입을 위한 정보를 작성해주세요.</span>
+                        기본 정보 입력
                     </div>
                     <div class="input_wrap">
                         <div class="input_container">
+                            <label for="nickname" class="input_title">
+                                <input type="text" id="nickname" placeholder="닉네임">
+                            </label>
+                            <button class="n-focusBtn" type="button">중복 확인</button>
+                        </div>
+                        <div class="input_container m-top20">
                             <label for="id" class="input_title">
                                 <input type="text" id="id" placeholder="아이디">
                             </label>
-                            <button class="" type="button">중복 확인</button>
+                            <button class="n-focusBtn" type="button">중복 확인</button>
                         </div>
                         <div class="input_container m-top20">
                             <label for="password" class="password_container">
@@ -58,9 +65,19 @@
                                 </span>
                             </label>
                         </div>
+                        <div class="input_container m-top20">
+                            <label for="check-password" class="password_container">
+                                <input id="check-password" type="password" placeholder="비밀번호 확인" oninput="updatePassword()">
+                                <span class="eyeBtn">
+                                    <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M9.99997 0.25C5.91882 0.25 2.36847 2.51686 0.542558 5.85557C0.152487 6.56882 0.15248 7.43102 0.54254 8.14428C2.36843 11.4831 5.91882 13.75 10 13.75C14.0812 13.75 17.6315 11.4831 19.4574 8.14443C19.8475 7.43118 19.8475 6.56898 19.4575 5.85572C17.6316 2.51694 14.0812 0.25 9.99997 0.25ZM10 4.75C8.75736 4.75 7.75 5.75736 7.75 7C7.75 8.24264 8.75736 9.25 10 9.25C10.6805 9.25 11.2904 8.94794 11.7029 8.47059C11.0168 8.33275 10.5 7.72673 10.5 7C10.5 6.27327 11.0168 5.66725 11.7029 5.52941C11.2904 5.05206 10.6805 4.75 10 4.75ZM6.25 7C6.25 4.92893 7.92893 3.25 10 3.25C12.0711 3.25 13.75 4.92893 13.75 7C13.75 9.07107 12.0711 10.75 10 10.75C7.92893 10.75 6.25 9.07107 6.25 7Z" fill="#999"/>
+                                    </svg>
+                                </span>
+                            </label>
+                        </div>
                     </div>
                     <div class="btn_wrap">
-                        <button type="button" class="finishBtn" onclick="location.href='home-after.html'">회원가입</button>
+                        <button type="button" class="finishBtn" onclick="location.href='registe-complete.html'">회원가입</button>
                     </div>
                 </div>
             </div>
@@ -155,47 +172,52 @@
     <script src="js/script.js"></script>
 
     <script>
-        function updatePassword() {
-            // 비밀번호 처리 로직
-        }
+        document.addEventListener("DOMContentLoaded", function () {
+            // 비밀번호 입력 필드 관련 기능
+            document.querySelectorAll(".eyeBtn").forEach((eyeBtn) => {
+                eyeBtn.addEventListener("click", function () {
+                    let passwordInput = this.previousElementSibling; // 이전 요소(비밀번호 입력 필드) 찾기
+                    let path = this.querySelector("svg > path");
 
-        const eyeBtn = document.querySelector('.eyeBtn');
-        const passwordInput = document.getElementById('password');
+                    if (passwordInput.type === "password") {
+                        passwordInput.type = "text";
+                        path.style.fill = "#222";
+                    } else {
+                        passwordInput.type = "password";
+                        path.style.fill = "#999";
+                    }
+                });
+            });
 
-        eyeBtn.addEventListener('click', () => {
-            if (passwordInput.type === 'password') {
-                passwordInput.type = 'text'; // 비밀번호 표시
-            } else {
-                passwordInput.type = 'password'; // 비밀번호 숨기기
-            }
-        });
-        
-        //-- 패스워드 눈 아이콘 클릭
-        let $eyeBtn = $('.eyeBtn');
+            // 닉네임/아이디 입력 시 중복 확인 버튼 스타일 변경
+            document.querySelectorAll(".input_container").forEach((container) => {
+                let input = container.querySelector("input");
+                let button = container.querySelector(".n-focusBtn");
 
-        $eyeBtn.click(function(){
-            let $path = $(this).find('svg > path');
-            let pathColor = $path.css('fill');
+                if (input && button) {
+                    input.addEventListener("focus", function () {
+                        button.classList.add("focusBtn");
+                        button.classList.remove("n-focusBtn");
+                    });
 
-            if (pathColor === 'rgb(153, 153, 153)') {
-                $path.css({fill : '#222'}); 
-            } else {
-                $path.css({fill : '#999'});
-            }
-        });
+                    input.addEventListener("blur", function () {
+                        if (input.value.length === 0) {
+                            button.classList.remove("focusBtn");
+                            button.classList.add("n-focusBtn");
+                        }
+                    });
 
-        //-- 로그인 상태 유지 클릭
-        let $keepLogin = $('.keep_login');
-
-        $keepLogin.click(function(){
-            let $rect = $(this).find('svg > rect');
-            let rectColor = $rect.css('fill');
-
-            if (rectColor === 'rgb(211, 211, 211)') { /* d3d3d3 */
-                $(this).css({color : '#999'});
-            } else if (rectColor === 'rgb(10, 56, 124)') {
-                $(this).css({color : '#222'});
-            }
+                    input.addEventListener("input", function () {
+                        if (input.value.length > 0) {
+                            button.classList.add("focusBtn");
+                            button.classList.remove("n-focusBtn");
+                        } else {
+                            button.classList.remove("focusBtn");
+                            button.classList.add("n-focusBtn");
+                        }
+                    });
+                }
+            });
         });
     </script>
 </body>
