--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
         <main id="main" class="main">
             <div class= "inner"> 
-                <div class="menu-area">
+                <!-- 메뉴 영역 -->
+                <section class="menu-area">
                     <div class="content">
                         <div class="offcanvas-wrap">
                             <div class="offcanvas">
@@ -91,7 +92,7 @@
                                                 </a>
                                                 <ul class="gnb-sub">
                                                     <li class="gnb-sub-item">
-                                                        <a href="#">비디오 템플릿</a>
+                                                        <a href="#" class="focus-sub">비디오 템플릿</a>
                                                     </li>
                                                     <li class="gnb-sub-item">
                                                         <a href="#">카드뉴스 템플릿</a>
@@ -125,11 +126,14 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="content-area">
-                    <div>0</div>
-                    <div>0</div>
-                </div>
+                </section>
+
+                <!-- 컨텐츠 영역 -->
+                <section class="content-area">
+                    <div>
+
+                    </div>
+                </section>
             </div>
         </main>
 
