edit: video2 content-area 영역

--- a/video2.html
+++ b/video2.html
@@ -42,13 +42,13 @@
                     <!-- log-after 로그인 후 보여짐 -->
                     <ul class="right-content log-after">
                         <li>
-                            <a class="guideBtn" href="login.html">
+                            <a class="guideBtn after-item" href="login.html">
                                 <img src="img/menu/guide-icon-atv.svg" alt="사용가이드 아이콘">
                                 사용 가이드
                             </a>
                         </li> 
                         <li>
-                            <a class="countBadge" href="#">
+                            <a class="countBadge after-item" href="#">
                                 <img src="img/time-count.svg" alt="무료 횟수 카운트"> 5/5
                             </a>
                         </li>
@@ -59,13 +59,13 @@
                                 <span></span>
                             </div>
                             <div class="add-item">
-                                <div>
+                                <div class="item">
                                     <a href="#">구독정보</a>
                                 </div>
-                                <div>
+                                <div class="item">
                                     <a href="#">내 정보</a>
                                 </div>
-                                <div>
+                                <div class="item">
                                     <a href="#">로그아웃</a>
                                 </div>
                                 
@@ -162,59 +162,108 @@
 
                             <div class="content-item template-item">
                                 <!-- 최근 사용한 템플릿 -->
-                                <div class="">
-                                    <div class="">
-                                        최근 사용한 템플릿 <span>25. 03. 04</span>
+                                <div class="recent-wrap template-wrap">
+                                    <div class="title">
+                                        최근 사용한 템플릿<span class="date-view">25. 03. 04</span>
                                     </div>
-                                    <div class="">
-                                        <img src="" alt="">
-                                    </div>
-                                    <div class="">
-                                        <div>Dance battle</div>
+                                    <a href="#" class="tamplate-edit">
+                                        <div class="templaete-inner">
+                                            <div class="templaete-img">
+                                                <img src="img/template/recent-img.png" alt="최근 사용한 템플릿">
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <div class="bottom-item">
+                                        <div class="template-title">Dance battle</div>
                                         <button class="deletBtn">
-                                            <img src="" alt="">
+                                            <img src="img/template/delet-btn.svg" alt="휴지통 아이콘">
                                         </button>
                                     </div>
                                 </div>
 
                                 <!-- 지난 템플릿 -->
-                                <div class="">
-                                    <div class="">
-                                        지난 템플릿
-                                    </div>
-
-                                    <div>
-                                        <span>25. 03. 04</span>
-                                        <div class="">
-                                            <img src="" alt="">
+                                <div class="past-wrap template-wrap">
+                                    <div class="title">지난 템플릿</div>
+                                    <div class="past-container">
+                                        <!-- 지난 템플릿1 -->
+                                        <div class="past-item">
+                                            <span class="date-view">25. 03. 04</span>
+                                            <a href="#" class="tamplate-edit">
+                                                <div class="templaete-inner">
+                                                    <div class="templaete-img">
+                                                        <img src="img/template/past-img1.png" alt="지난 템플릿1">
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <div class="bottom-item"">
+                                                <div class="template-title">Dance battle</div>
+                                                <button class="deletBtn">
+                                                    <img src="img/template/delet-btn.svg" alt="휴지통 아이콘">
+                                                </button>
+                                            </div>
                                         </div>
-                                        <div class="">
-                                            <div>Dance battle</div>
-                                            <button class="deletBtn">
-                                                <img src="" alt="">
-                                            </button>
-                                        </div>
-                                    </div>
-
-                                    <div>
-                                        <span>25. 03. 04</span>
-                                        <div class="">
-                                            <img src="" alt="">
-                                        </div>
-                                        <div class="">
-                                            <div>Dance battle</div>
-                                            <button class="deletBtn">
-                                                <img src="" alt="">
-                                            </button>
+                                        <!-- 지난 템플릿2 -->
+                                        <div class="past-item">
+                                            <span class="date-view">25. 03. 04</span>
+                                            <a href="#" class="tamplate-edit">
+                                                <div class="templaete-inner">
+                                                    <div class="templaete-img">
+                                                        <img src="img/template/past-img2.png" alt="지난 템플릿2">
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <div class="bottom-item">
+                                                <div class="template-title">Dance battle</div>
+                                                <button class="deletBtn">
+                                                    <img src="img/template/delet-btn.svg" alt="휴지통 아이콘">
+                                                </button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
+                        <div class="template-addBtn">
+                            <button type="button" class="addBnt">템플릿 추가하기</button>
+                        </div>
                     </article>
                 </section>
             </div>
         </main>
+
+        <!-- 삭제 클릭 확인 모달창 -->
+        <div class="delet-check-pop pop-wrap">
+            <div class="pop-inner">
+                <p class="pop-text">선택하신 컨텐츠를 정말로 삭제하시겠습니까?</p>
+                <div class="popBtn-wrap">
+                    <div class="popBtn01 popBtn-item">
+                        <button class="noBtn" type="button">아니오</button>
+                    </div>
+                    <div class="popBtn02 popBtn-item ">
+                        <button class="yesBtn" type="button">예</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--  템플릿 추가 이름 생성 모달창 -->
+        <div class="templaete-add pop-wrap">
+            <div class="pop-inner">
+                <label class="pop-text">템플릿 이름 생성</label>
+                <div class="pop-input">
+                    <input type="text" id="templateName" placeholder="템플릿 이름을 지정해주세요.">
+                </div>
+                <div class="popBtn-wrap">
+                    <div class="popBtn01 popBtn-item">
+                        <button class="noBtn" type="button">취소하기</button>
+                    </div>
+                    <div class="popBtn02 popBtn-item ">
+                        <button class="yesBtn" type="button">생성하기</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <footer id="footer" class="footer">
             <div class="content">
@@ -305,6 +354,67 @@
     <script src="js/script.js"></script>
 
     <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const deleteButtons = document.querySelectorAll(".deletBtn");
+            const deleteModal = document.querySelector(".delet-check-pop.pop-wrap"); // 삭제 모달
+            const templateAddModal = document.querySelector(".templaete-add.pop-wrap"); // 템플릿 추가 모달
+            const addButton = document.querySelector(".template-addBtn button"); // 템플릿 추가 버튼
+
+            const noButtonDelete = deleteModal.querySelector(".noBtn");
+            const yesButtonDelete = deleteModal.querySelector(".yesBtn");
+            const noButtonAdd = templateAddModal.querySelector(".noBtn");
+
+            let currentDeleteButton = null; // 현재 클릭한 삭제 버튼 저장
+
+            // 삭제 버튼 클릭 시 삭제 모달창 보이기
+            deleteButtons.forEach(button => {
+                button.addEventListener("click", function () {
+                    currentDeleteButton = button; // 현재 클릭한 삭제 버튼 저장
+                    deleteModal.style.display = "flex"; // 삭제 모달 표시
+                });
+            });
+
+            // "아니오" 버튼 클릭 시 삭제 모달 숨기기
+            noButtonDelete.addEventListener("click", function () {
+                deleteModal.style.display = "none";
+            });
+
+            // "예" 버튼 클릭 시 이미지 변경 후 삭제 모달 숨기기
+            yesButtonDelete.addEventListener("click", function () {
+                if (currentDeleteButton) {
+                    const templateImg = currentDeleteButton.closest(".template-wrap, .past-item").querySelector(".templaete-img img");
+                    if (templateImg) {
+                        templateImg.src = "img/template/deleted-img.png"; // 변경할 이미지 경로
+                        templateImg.alt = "삭제된 템플릿"; // 접근성을 위한 alt 변경
+                    }
+                }
+                deleteModal.style.display = "none";
+            });
+
+            // 템플릿 추가 버튼 클릭 시 추가 모달창 보이기
+            addButton.addEventListener("click", function () {
+                templateAddModal.style.display = "flex";
+            });
+
+            // "아니오" 버튼 클릭 시 추가 모달 숨기기
+            noButtonAdd.addEventListener("click", function () {
+                templateAddModal.style.display = "none";
+            });
+
+            // 모달 바깥 클릭 시 닫기 (삭제 모달)
+            deleteModal.addEventListener("click", function (event) {
+                if (event.target === deleteModal) {
+                    deleteModal.style.display = "none";
+                }
+            });
+
+            // 모달 바깥 클릭 시 닫기 (템플릿 추가 모달)
+            templateAddModal.addEventListener("click", function (event) {
+                if (event.target === templateAddModal) {
+                    templateAddModal.style.display = "none";
+                }
+            });
+        });
     </script>
 </body>
 </html>
