--- a/video2.html
+++ b/video2.html
@@ -166,27 +166,29 @@
                                     <div class="title">
                                         최근 사용한 템플릿<span class="date-view">25. 03. 04</span>
                                     </div>
-                                    <a href="#" class="tamplate-edit">
-                                        <div class="templaete-inner">
-                                            <div class="templaete-img">
-                                                <img src="img/template/recent-img.png" alt="최근 사용한 템플릿">
+                                    <div class="tamplate-box">
+                                        <a href="#" class="tamplate-edit">
+                                            <div class="templaete-inner">
+                                                <div class="templaete-img">
+                                                    <img src="img/template/recent-img.png" alt="최근 사용한 템플릿">
+                                                </div>
                                             </div>
+                                        </a>
+                                        <div class="bottom-item">
+                                            <div class="template-title">Dance battle</div>
+                                            <button class="deletBtn">
+                                                <img src="img/template/delet-btn.svg" alt="휴지통 아이콘">
+                                            </button>
                                         </div>
-                                    </a>
-                                    <div class="bottom-item">
-                                        <div class="template-title">Dance battle</div>
-                                        <button class="deletBtn">
-                                            <img src="img/template/delet-btn.svg" alt="휴지통 아이콘">
-                                        </button>
                                     </div>
                                 </div>
 
                                 <!-- 지난 템플릿 -->
                                 <div class="past-wrap template-wrap">
-                                    <div class="title">지난 템플릿</div>
                                     <div class="past-container">
+                                        <div class="title">지난 템플릿</div>
                                         <!-- 지난 템플릿1 -->
-                                        <div class="past-item">
+                                        <div class="past-item tamplate-box">
                                             <span class="date-view">25. 03. 04</span>
                                             <a href="#" class="tamplate-edit">
                                                 <div class="templaete-inner">
@@ -203,7 +205,7 @@
                                             </div>
                                         </div>
                                         <!-- 지난 템플릿2 -->
-                                        <div class="past-item">
+                                        <div class="past-item tamplate-box">
                                             <span class="date-view">25. 03. 04</span>
                                             <a href="#" class="tamplate-edit">
                                                 <div class="templaete-inner">
@@ -366,11 +368,22 @@
 
             let currentDeleteButton = null; // 현재 클릭한 삭제 버튼 저장
 
+            // 화면에서 보이는 템플릿 개수를 세는 함수
+            function getVisibleTemplateCount() {
+                return [...document.querySelectorAll(".template-wrap, .past-item")].filter(
+                    item => item.style.display !== "none"
+                ).length;
+            }
+
             // 삭제 버튼 클릭 시 삭제 모달창 보이기
             deleteButtons.forEach(button => {
                 button.addEventListener("click", function () {
-                    currentDeleteButton = button; // 현재 클릭한 삭제 버튼 저장
-                    deleteModal.style.display = "flex"; // 삭제 모달 표시
+                    if (getVisibleTemplateCount() > 1) {
+                        currentDeleteButton = button; // 현재 클릭한 삭제 버튼 저장
+                        deleteModal.style.display = "flex"; // 삭제 모달 표시
+                    } else {
+                        alert("마지막 템플릿은 삭제할 수 없습니다."); // 1개만 남으면 경고
+                    }
                 });
             });
 
@@ -379,13 +392,16 @@
                 deleteModal.style.display = "none";
             });
 
-            // "예" 버튼 클릭 시 이미지 변경 후 삭제 모달 숨기기
+            // "예" 버튼 클릭 시 .template-box 숨김 처리 후 삭제 모달 숨기기
             yesButtonDelete.addEventListener("click", function () {
                 if (currentDeleteButton) {
-                    const templateImg = currentDeleteButton.closest(".template-wrap, .past-item").querySelector(".templaete-img img");
-                    if (templateImg) {
-                        templateImg.src = "img/template/deleted-img.png"; // 변경할 이미지 경로
-                        templateImg.alt = "삭제된 템플릿"; // 접근성을 위한 alt 변경
+                    if (getVisibleTemplateCount() > 1) { // 1개 초과할 때만 삭제 가능
+                        const templateBox = currentDeleteButton.closest(".template-wrap, .past-item");
+                        if (templateBox) {
+                            templateBox.style.display = "none"; // 숨김 처리
+                        }
+                    } else {
+                        alert("마지막 템플릿은 삭제할 수 없습니다."); // 혹시 모달이 열려있을 경우 방어 코드
                     }
                 }
                 deleteModal.style.display = "none";
@@ -415,6 +431,9 @@
                 }
             });
         });
+
+
+
     </script>
 </body>
 </html>
