--- a/video2.html
+++ b/video2.html
@@ -42,9 +42,8 @@
                     <!-- log-after 로그인 후 보여짐 -->
                     <ul class="right-content log-after">
                         <li>
-                            <a class="guideBtn after-item" href="login.html">
-                                <img src="img/menu/guide-icon-atv.svg" alt="사용가이드 아이콘">
-                                사용 가이드
+                            <a class="guideBtn after-item" href="guide.html">
+                                <img src="img/menu/guide-icon-atv.svg" alt="사용가이드 아이콘"> 사용 가이드
                             </a>
                         </li> 
                         <li>
@@ -60,13 +59,13 @@
                             </div>
                             <div class="add-item">
                                 <div class="item">
-                                    <a href="#">구독정보</a>
+                                    <a href="subscrib-info.html">구독정보</a>
                                 </div>
                                 <div class="item">
-                                    <a href="#">내 정보</a>
+                                    <a href="info.html">내 정보</a>
                                 </div>
                                 <div class="item">
-                                    <a href="#">로그아웃</a>
+                                    <a href="index.html">로그아웃</a>
                                 </div>
                                 
                             </div>
@@ -87,7 +86,7 @@
                                     <nav id="nav">
                                         <ul class="gnb">
                                             <li class="gnb-item">
-                                                <a href="#">
+                                                <a href="my-project.html">
                                                     <span class="gnb-txt">
                                                         <img src="img/menu/my-project.svg" alt="내 프로젝트">내 프로젝트
                                                     </span>
@@ -107,36 +106,36 @@
                                                 </a>
                                                 <ul class="gnb-sub">
                                                     <li class="gnb-sub-item">
-                                                        <a href="#" class="focus-sub">비디오 템플릿</a>
+                                                        <a href="video2.html" class="focus-sub">비디오 템플릿</a>
                                                     </li>
                                                     <li class="gnb-sub-item">
-                                                        <a href="#">카드뉴스 템플릿</a>
+                                                        <a href="card.html">카드뉴스 템플릿</a>
                                                     </li>
                                                 </ul>
                                             </li>
                                             <li class="gnb-item">
-                                                <a href="#">
+                                                <a href="subscribe-year.html">
                                                     <span class="gnb-txt">
                                                         <img src="img/menu/subscribe.svg" alt="구독하기">구독하기
                                                     </span>
                                                 </a>
                                             </li>
                                             <li class="gnb-item">
-                                                <a href="#">
+                                                <a href="notice.html">
                                                     <span class="gnb-txt">
                                                         <img src="img/menu/notice.svg" alt="공지사항">공지사항
                                                     </span>
                                                 </a>
                                             </li>
                                             <li class="gnb-item">
-                                                <a href="#">
+                                                <a href="qa-list.html">
                                                     <span class="gnb-txt">
                                                         <img src="img/menu/service-center.svg" alt="고객센터">고객센터
                                                     </span>
                                                 </a>
                                             </li>
                                             <li class="gnb-item guide-gnb">
-                                                <a href="#">
+                                                <a href="guide.html">
                                                     <span class="gnb-txt">
                                                         <img src="img/menu/guide-icon.svg" alt="사용 가이드">사용 가이드
                                                     </span>
