add: video2.html > video.html로 명칭 수정 / video-making.html 파일 생성

--- a/video.html
+++ b/video.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css" />
-    <title>Viral</title>
+    <title>Viral | 비디오 템플릿 스타일</title>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
 
@@ -106,7 +106,7 @@
                                                 </a>
                                                 <ul class="gnb-sub">
                                                     <li class="gnb-sub-item">
-                                                        <a href="video2.html" class="focus-sub">비디오 템플릿</a>
+                                                        <a href="video2.html" class="focus-sub">비디오 템플릿 스타일</a>
                                                     </li>
                                                     <li class="gnb-sub-item">
                                                         <a href="card.html">카드뉴스 템플릿</a>
@@ -414,7 +414,7 @@
                     templateAddModal.style.display = "none";
                 }
             });
-        });ㄴ
+        });
     </script>
 </body>
 </html>
